# FBXLoader

./: .gitmodules  CMakeLists.txt  CMakeSettings.txt  README.md  SKELL.fbx  clean.sh  cow.fbx  cow2.fbx  cow3.fbx  imgui.ini  reset.sh  sample.cpp
DebugTxt/: materialnotsplit  materialsplit  out  report.txt
Dependencies/include/: Animations.h  App.h  Camera.h  Common.h  LightSources.h  Mesh.h  Model.h  Primitives.h  Shader.h  Structs.h  Utils.h  Window.h  stb_image.h
Dependencies/include/OpenGL/: Camera.h  Debug.h  LightSources.h  Primitives.h  Shader.h  Structs.h  Window.h
Dependencies/shaders/: depthFrag.glsl  depthVert.glsl  fragment.glsl  simpleFrag.glsl  simpleVert.glsl  texFrag.glsl  texVert.glsl  vertex.glsl
Dependencies/source/: Animations.cpp  App.cpp  Debug.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Utils.cpp  Window.cpp  main.cpp
Dependencies/source/OpenGL/: Animations.cpp  Debug.cpp  Shader.cpp  Window.cpp
